resources/assets/stylesheets/scss/contentbar.scss
.contentbar {
    background-color: $dark-gray-color-5;
    border: solid thin $dark-gray-color-30;
    display: flex;
    flex-wrap: nowrap;
    height: auto;
    justify-content: flex-start;
    margin-bottom: 15px;
    min-height: 30px;
    padding: 1em 2em;

    .contentbar-nav {
        display: flex;
        width: auto;
    }

    .contentbar-wrapper-left {
        display: flex;
        flex: auto;

        .contentbar-breadcrumb {
            display: flex;
            font-size: 1.25em;
            line-height: 1.5em;
            margin-right: 1em;
            min-width: 0;

            .contentbar-icon {
                flex: 0;
                height: 24px;
                margin-top: 2px;
                width: 24px;
            }

            ul {
                display: flex;
                list-style: none;
                margin-left: 15px;
                padding-left: 0;

                li+li:before {
                    padding: 0 0.25em;
                    content: '/';
                    background-repeat: no-repeat;
                    background-position: center;
                }

                .contentbar-breadcrumb-item {
                    display: inline;
                    flex-shrink: 100000;
                    min-width: 0;
                    overflow: hidden;
                    text-overflow: ellipsis;
                    white-space: nowrap;

                    a {
                        color: $base-color;
                        text-decoration: none;
                        &:hover {
                            color: $active-color;
                        }
                    }

                    &.contentbar-breadcrumb-item-current {
                        flex-shrink: 1;
                    }
                }
            }
        }
    }

    .contentbar-wrapper-right {
        align-items: center;
        display: flex;
        justify-content: flex-end;
        position: relative;

        .contentbar-info {
            flex: 0 1 auto;
        }

        .contentbar-button-wrapper {
            height: 24px;
            margin: 0 7px;

            @-moz-document url-prefix() {
                &.contentbar-action-menu-wrapper {
                    margin-top: 2px;
                }
            }

            .contentbar-button, .cw-ribbon-button {
                background-color: transparent;
                background-position: center;
                background-repeat: no-repeat;
                background-size: 24px;
                border: none;
                cursor: pointer;
                display: inline-block;
                height: 24px;
                width: 24px;

                &.contentbar-button-menu,
                &.cw-ribbon-button-menu {
                    @include background-icon(table-of-contents, clickable, 24);
                }

                &.contentbar-button-zoom::before {
                    left: -5px;
                    position: relative;
                    top: -2px;
                }

                @-moz-document url-prefix() {
                    &.contentbar-button-zoom::before {
                        top: -3px;
                    }
                }

            }

        }
    }

}

